# ros2_lab_ws

./: .gitignore  install_dependencies.sh
src/ai/: README.md
src/ai/config/: yolo.yaml
src/ai/data/online_lab_1/annotations/: instances_default.json
src/ai/data/online_lab_1/coco_converted/images/output/predict/labels/: Screenshot from 2025-07-16 18-30-39.txt  Screenshot from 2025-07-16 18-30-47.txt  Screenshot from 2025-07-16 18-30-51.txt  Screenshot from 2025-07-16 18-30-59.txt  Screenshot from 2025-07-16 18-31-06.txt  Screenshot from 2025-07-16 18-33-39.txt  Screenshot from 2025-07-16 18-33-47.txt  Screenshot from 2025-07-16 18-33-54.txt  Screenshot from 2025-07-16 18-34-03.txt  Screenshot from 2025-07-16 18-34-09.txt  Screenshot from 2025-07-16 18-34-15.txt  Screenshot from 2025-07-16 18-34-19.txt  Screenshot from 2025-07-16 18-34-57.txt  Screenshot from 2025-07-16 18-35-15.txt
src/ai/data/online_lab_1/coco_converted/labels/: train.cache  validate.cache
src/ai/data/online_lab_1/coco_converted/labels/test/: Screenshot from 2025-07-16 18-30-39.txt  Screenshot from 2025-07-16 18-33-39.txt  Screenshot from 2025-07-16 18-34-15.txt
src/ai/data/online_lab_1/coco_converted/labels/train/: Screenshot from 2025-07-16 18-30-47.txt  Screenshot from 2025-07-16 18-30-51.txt  Screenshot from 2025-07-16 18-30-59.txt  Screenshot from 2025-07-16 18-31-06.txt  Screenshot from 2025-07-16 18-33-47.txt  Screenshot from 2025-07-16 18-33-54.txt  Screenshot from 2025-07-16 18-34-03.txt  Screenshot from 2025-07-16 18-34-19.txt  Screenshot from 2025-07-16 18-34-57.txt
src/ai/data/online_lab_1/coco_converted/labels/validate/: Screenshot from 2025-07-16 18-34-09.txt  Screenshot from 2025-07-16 18-35-15.txt
src/ai/data/online_lab_2/: data.yaml  train.txt
src/ai/data/online_lab_2/labels/: train.cache  validate.cache
src/ai/data/online_lab_2/labels/test/: Screenshot from 2025-07-16 18-34-09.txt  Screenshot from 2025-07-16 18-34-57.txt
src/ai/data/online_lab_2/labels/train/: Screenshot from 2025-07-16 18-30-47.txt  Screenshot from 2025-07-16 18-30-51.txt  Screenshot from 2025-07-16 18-30-59.txt  Screenshot from 2025-07-16 18-31-06.txt  Screenshot from 2025-07-16 18-33-47.txt  Screenshot from 2025-07-16 18-33-54.txt  Screenshot from 2025-07-16 18-34-03.txt  Screenshot from 2025-07-16 18-34-15.txt  Screenshot from 2025-07-16 18-34-19.txt  Screenshot from 2025-07-16 18-35-15.txt
src/ai/data/online_lab_2/labels/validate/: Screenshot from 2025-07-16 18-30-39.txt  Screenshot from 2025-07-16 18-33-39.txt
src/ai/scripts/: convert_coco2yolo.py  inference_model.py  split_dataset.py  train_model.py  visualize_annotations.py
src/ai/scripts/yolo_training/seg_from_scratch/: args.yaml  results.csv
src/ai/scripts/yolo_training/seg_from_scratch2/: args.yaml  results.csv
src/ai/scripts/yolo_training/seg_from_scratch3/: args.yaml  results.csv
src/interfaces/: CMakeLists.txt  README.md  package.xml
src/interfaces/msg/: StatusApriltagSegmentation.msg  StatusCoreNode.msg
src/interfaces/srv/: EnableNode.srv
src/launcher/: CMakeLists.txt  README.md  package.xml
src/launcher/config/: full_config.yaml
src/launcher/launch/: full_communication.launch.py  full_perception.launch  full_simulation.launch  full_system.launch
src/perception/: CMakeLists.txt  README.md  package.xml
src/perception/config/: apriltag_segmentation.rviz  apriltag_segmentation.yaml  robot_segmentation.perspective  robot_segmentation.yaml
src/perception/include/perception/: apriltag_segmentation.hpp  image_segmentation.hpp
src/perception/launch/: apriltag_segmentation.launch.xml  robot_segmentation.launch
src/perception/scripts/: robot_segmentation.py
src/perception/src/: apriltag_segmentation.cpp  image_segmentation.cpp
src/simulation/turtlebot3_gazebo_custom/launch/: multi_robot.launch.py  spawn_turtlebot3.launch.py
src/simulation/turtlebot3_gazebo_custom/models/turtlebot3_burger_cam/: model.sdf
src/simulation/turtlebot3_gazebo_custom/worlds/: turtlebot3_vision_world.world
src/turtlebot3_gazebo_custom/: CMakeLists.txt  package.xml
src/turtlebot3_gazebo_custom/launch/: turtlebot3_world.launch.py
