<?xml version="1.0"?>
<package format="3">

  <!-- General informations -->
  <name>launcher</name>
  <version>0.0.0</version>
  <description>The launcher package containing the nodes and algorithms related to the launcher of the project.</description>

  <!-- Maintainer and authors -->
  <maintainer email="nicolas.erbetti.k@gmail.com">Nicolas Erbetti</maintainer>
  <author email="nicolas.erbetti.k@gmail.com">Nicolas Erbetti</author>
  <!-- License -->
  <license>copyright: (C) 2025</license>
  <!-- Website -->
  <url type="Github repository of the root directory.">https://github.com/nico-kuroxy/ros2_lab_ws</url>

  <!-- General dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- Messages, services, actions, dynamic reconfigure dependencies -->
  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> -->

</package>